<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_qr_encoder"
            android:title="@string/menu_qrencoder" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_database"
            android:icon="@drawable/ic_menu_database"
            android:title="@string/menu_database" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_note"
            android:title="@string/menu_chat" />
    </group>
</menu>