<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/account_header">

        <Preference
            app:key="signature"
            app:title="@string/account_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/scanner_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/bib_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/application_host">
        <EditTextPreference
            app:icon="@drawable/ic_menu_database"
            app:key="username"
            app:title="Username" />
        <EditTextPreference
            app:icon="@drawable/ic_menu_database"
            app:key="cookie"
            app:title="Server cookie" />
        <EditTextPreference
            app:icon="@drawable/ic_menu_database"
            app:key="host"
            app:title="Server host" />
        <EditTextPreference
            app:icon="@drawable/ic_menu_database"
            app:key="port"
            app:title="Server port" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="comments_notifications"
            app:title="Comments Notifications" />
    </PreferenceCategory>

</PreferenceScreen>