<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.eustrosoft.androidqr.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.eustrosoft.androidqr.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.eustrosoft.androidqr.ui.qrencoder.QREncoderFragment"
        android:label="@string/menu_qrencoder"
        tools:layout="@layout/fragment_qrencoder" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="ru.eustrosoft.androidqr.ui.note.NoteFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/activity_note" />
</navigation>