<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.database.DatabaseFragment">

    <LinearLayout
        android:id="@+id/filled_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/database_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/database_url_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/database_url_edit_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/database_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/database_user_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/database_user_edit_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/database_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/database_password_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/database_password_edit_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/database_query"
            android:layout_margin="4dp"
            android:hint="@string/database_query_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/database_query_edit_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout-->

        <Button
            android:id="@+id/execute_query_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/execute_query_button" />

        <TextView
            android:id="@+id/query_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/query_text_view" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>